Bug 44043 - [4.6 Regression] sorry, unimplemented: inlining failed in call to 'dst_output': optimizing for size and code size would grow
Summary: [4.6 Regression] sorry, unimplemented: inlining failed in call to 'dst_output...
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: tree-optimization (show other bugs)
Version: 4.6.0
: P3 major
Target Milestone: 4.6.0
Assignee: Richard Biener
URL:
Keywords: ice-on-valid-code
Depends on:
Blocks:
 
Reported: 2010-05-08 15:32 UTC by Justin P. Mattock
Modified: 2010-05-10 22:14 UTC (History)
2 users (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed: 2010-05-08 16:38:09


Attachments
make net/ipv4/raw.i (230.49 KB, application/gzip)
2010-05-08 16:26 UTC, Justin P. Mattock
Details
reduced testcase (892 bytes, text/plain)
2010-05-09 11:29 UTC, Richard Biener
Details
dmesg of the latest HEAD and gcc 4.6.0 (14.16 KB, application/octet-stream)
2010-05-09 18:42 UTC, Justin P. Mattock
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Justin P. Mattock 2010-05-08 15:32:18 UTC
building the kernel hits this error:

include/linux/netfilter.h: In function 'raw_sendmsg':
include/net/dst.h:262:19: sorry, unimplemented: inlining failed in call to 'dst_output': optimizing for size and code size would grow
include/linux/netfilter.h:206:7: sorry, unimplemented: called from here
make[2]: *** [net/ipv4/raw.o] Error 1
make[1]: *** [net/ipv4] Error 2
make: *** [net] Error 2


 gcc --version
gcc (GCC) 4.6.0 20100416 (experimental)
Copyright (C) 2010 Free Software Foundation, Inc.
This is free software; see the source for copying conditions.  There is NO
warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
Comment 1 H.J. Lu 2010-05-08 15:57:41 UTC
Please provide a preprocessed testcase.
Comment 2 Justin P. Mattock 2010-05-08 16:26:18 UTC
Created attachment 20606 [details]
make  net/ipv4/raw.i

hopefully this is the correct *.c file
the file gets rejected because of the size
(I compressed it, but am not sure if it will upload as an attachment)
Comment 3 Richard Biener 2010-05-08 16:38:09 UTC
I will hava alook.
Comment 4 Justin P. Mattock 2010-05-08 17:46:01 UTC
(In reply to comment #3)
> I will hava alook.
> 

alright.. let me know if you need any other kind of info.
Comment 5 Richard Biener 2010-05-09 11:29:37 UTC
Created attachment 20611 [details]
reduced testcase
Comment 6 Richard Biener 2010-05-09 14:13:37 UTC
Subject: Bug 44043

Author: rguenth
Date: Sun May  9 14:13:25 2010
New Revision: 159200

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=159200
Log:
2010-05-09  Richard Guenther  <rguenther@suse.de>

	PR middle-end/44043
	* ipa-inline.c (estimate_function_body_sizes): Return after
	disregarding inline limits.

	* gcc.c-torture/compile/pr44043.c: New testcase.

Added:
    trunk/gcc/testsuite/gcc.c-torture/compile/pr44043.c
Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/ipa-inline.c
    trunk/gcc/testsuite/ChangeLog

Comment 7 Richard Biener 2010-05-09 14:14:45 UTC
Fixed.
Comment 8 Justin P. Mattock 2010-05-09 16:25:17 UTC
o.k... First Thank you vary much for helping me on this.
and second: I added your patch: PR middle-end/44043
        * ipa-inline.c (estimate_function_body_sizes): Return after
        disregarding inline limits.

and am in the process of building gcc(should take about an hour or so), then I'll see if the kernel compiles.
Comment 9 Justin P. Mattock 2010-05-09 18:42:26 UTC
Created attachment 20615 [details]
dmesg of the latest HEAD and gcc 4.6.0

o.k. buddy!! compiled gcc(looked good), the compiled the kernel
only issue I see is a warning about pao_tmp__
other than that nothing. looks good
attached is dmesg with the latest kernel, and gcc 4.6.0
Thanks again..(I'll run her, and see if I run into any issues).