gcc/ipa-inline.c
@@ -1835,10 +1835,13 @@ estimate_function_body_sizes (struct cgraph_node *node)
 
   if (node->local.disregard_inline_limits)
     {
+      if (dump_file)
+	fprintf (dump_file, "Disregarding inline limits.\n");
       inline_summary (node)->self_time = 0;
       inline_summary (node)->self_size = 0;
       inline_summary (node)->time_inlining_benefit = 0;
       inline_summary (node)->size_inlining_benefit = 0;
+      return;
     }
 
   if (dump_file)
